--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "La web de criptonic",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode=production",
+    "dev": "webpack serve --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Josué Rauda",
